--- a/.env
+++ b/.env
@@ -9,8 +9,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
+DB_HOST=laranen_mysql
+DB_PORT=33066
 DB_DATABASE=laranen
 DB_USERNAME=laravel
 DB_PASSWORD=test123
@@ -65,5 +65,5 @@ WWWUSER=1000
  FORWARD_FRONTEND_PORT=8080
 
  # You may change these, but then you should also update `backend/.env`
- FORWARD_DB_PORT=3306
+ FORWARD_DB_PORT=33066
  FORWARD_REDIS_PORT=3679
