Create task feature

--- a/.env
+++ b/.env
@@ -20,6 +20,7 @@ CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
+SESSION_DOMAIN=localhost
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
