--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:CyYSepkAhCSETuMfVxlsXTScl0+EGkqJcfRX7mMur88=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1
 SANCTUM_STATEFUL_DOMAINS=127.0.0.1:5173
 
 LOG_CHANNEL=stack
@@ -21,7 +21,7 @@ CACHE_DRIVER=file
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=cookie
-SESSION_DOMAIN=localhost
+SESSION_DOMAIN=127.0.0.1
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
