--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,7 +11,8 @@
         "laravel/helpers": "^1.6",
         "laravel/sanctum": "^3.0",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "parsedown/laravel": "^1.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.9",
